# webrtc_rust_server

flutter-webrtc-server/: README.md
flutter-webrtc-server-rust/: Cargo.toml  README.md  final_test.py  test_final.sh  test_turn.py  test_ws.js
flutter-webrtc-server-rust/configs/: config.ini
flutter-webrtc-server-rust/src/: main.rs
flutter-webrtc-server-rust/src/modules/: config.rs  mod.rs  signaling.rs  turn_server.rs
flutter-webrtc-server-rust/web/: index.html
flutter-webrtc-server/cmd/server/: main.go
flutter-webrtc-server/configs/: config.ini
flutter-webrtc-server/pkg/turn/: turn.go
