[package]
name = "flutter-webrtc-server-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rust-ini = "0.21"
log = "0.4"
env_logger = "0.10"
axum = { version = "0.7", features = ["ws", "tower-log"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
anyhow = "1.0"
hmac = "0.12"
sha1 = "0.10"
base64 = { version = "0.21", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5.5"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
stun = "0.4"
